Make logbox show log in a textarea to prevent page from growing too tall

--- a/mitex.css
+++ b/mitex.css
@@ -34,6 +34,11 @@ td.logbox
 
 }
 
+td.logbox .tex
+{
+    display: none;
+}
+
 td.td_tex
 {
     border: 1px solid black;
